--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                         <nav>
                             <div class="nav nav-tabs  text-center mb-0" id="nav-tab" role="tablist">
                                 <button style="width:25%;" class="nav-link active bg-primary text-white" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true"><i class="fas fa-home fa-2x fa-black"></i> <P>Home</P></button>
-                                <button style="width:24%; margin-left:1%;" class="nav-link bg-success text-white" id="nav-resume-tab" data-bs-toggle="tab" data-bs-target="#nav-resume" type="button" role="tab" aria-controls="nav-resume" aria-selected="false"><i class="fas fa-file fa-2x "></i><p> My resume</p> </button>
-                                <button style="width:24%; margin-left:1%;" class="nav-link bg-warning text-white " id="nav-work-tab" data-bs-toggle="tab" data-bs-target="#nav-work" type="button" role="tab" aria-controls="nav-work" aria-selected="false"><i class="fas fa-briefcase fa-2x "></i><p>Works</p> </button>
-                                <button style="width:24%; margin-left:1%;" class="nav-link bg-danger text-white" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false"><i class="fas fa-id-card-alt fa-2x "></i><p>Contact</p></button>
+                                <button style="width:25%; margin-left:%;" class="nav-link bg-success text-white" id="nav-resume-tab" data-bs-toggle="tab" data-bs-target="#nav-resume" type="button" role="tab" aria-controls="nav-resume" aria-selected="false"><i class="fas fa-file fa-2x "></i><p> My resume</p> </button>
+                                <button style="width:25%; margin-left:%;" class="nav-link bg-warning text-white " id="nav-work-tab" data-bs-toggle="tab" data-bs-target="#nav-work" type="button" role="tab" aria-controls="nav-work" aria-selected="false"><i class="fas fa-briefcase fa-2x "></i><p>Works</p> </button>
+                                <button style="width:25%; margin-left:%;" class="nav-link bg-danger text-white" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false"><i class="fas fa-id-card-alt fa-2x "></i><p>Contact</p></button>
                             </div>
                         </nav>
                     </div>
@@ -247,6 +247,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="row bg-dark">
                     <button class="btn border m-5 text-white" style="width: 200px;"> <i class="fas fa-cloud-download"></i> Download Resume</button>
                 </div>
@@ -280,16 +281,23 @@
                             </div>
                             <button class="btn btn-danger w-100">Submit</button>
                         </form>
-
-                        <div class="row bg-dark">
-                            <button class="btn border m-5 text-white" style="width: 200px;"> <i class="fas fa-cloud-download"></i> Download Resume</button>
-                        </div>
                     </div>
                 </div>
+                <div class="row bg-dark">
+                    <button class="btn border m-5 text-white" style="width: 200px;"> <i class="fas fa-cloud-download"></i> Download Resume</button>
+                </div>
             </div>
+        </div>
+    </div>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+
+</html>
+</body>
+
+</html>
 </body>
 
 </html>
